application  basic initial (modele anglais , modeles français) calcule scorp statistique 02.04.2020

--- a/web/templates/resultat.html
+++ b/web/templates/resultat.html
@@ -34,7 +34,8 @@
     <tr>
         <td> {{n+1}}</td>
         <td>{{phrases[n]}}</td>
-        <td>{{modeles[n]}}</td>
+        <td>modele : {{modeles[n]}}</br> type : {{types[n]}}</td>
+
     </tr>
     {% endfor %}
 </table>
