subjectivity anglais francais arabe dans tools correction orthographe anglais français dans tools 23.04.2020

--- a/web/templates/correction.html
+++ b/web/templates/correction.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>la langues est : {{language}}</h1>
-<form action="/filtrageSubjectivity" method="post" id="usrform">
+<form action="/SubjectivityFiltering" method="post" id="usrform">
     <label>Phrase</label>
     </br>
     {% for n in range(phrases| length) %}
