--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form action="/preTraitement" method="post" id="usrform">
+<form action="/preTreatment" method="post" id="usrform">
     <label for="input">input</label>
     </br>
     <textarea rows="5" cols="50" id="input" name="input" form="usrform">
