Make type model in first place

--- a/web/templates/resultat.html
+++ b/web/templates/resultat.html
@@ -32,9 +32,9 @@
     </tr>
     {% for n in range(modeles| length) %}
     <tr>
-        <td> {{n+1}}</td>
-        <td>{{phrases[n]}}</td>
-        <td>modele : {{modeles[n]}}</br> type : {{types[n]}}</td>
+        <td> {{n+1}} </td>
+        <td> {{phrases[n]}} </td>
+        <td> Type : {{types[n]}} <br> Modèle : {{modeles[n]}} </td>
 
     </tr>
     {% endfor %}
