--- a/web/templates/sentencesSubjective.html
+++ b/web/templates/sentencesSubjective.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
 </head>
+
 <body>
 <form action="/creationModeles" method="post" id="usrform">
     <label>Phrase</label>
@@ -35,6 +37,7 @@
     </br>
 
      <input type="submit" value="cree les modeles">
+    <button type="submit" formaction="/ExtractAdjVrb">extract verbe et adjective</button>
 </form>
 
 </body>
