--- a/web/templates/sentencesSubjective.html
+++ b/web/templates/sentencesSubjective.html
@@ -37,7 +37,7 @@
     </br>
 
      <input type="submit" value="cree les modeles">
-    <button type="submit" formaction="/ExtractAdjVrb">extract verbe et adjective</button>
+    <button type="submit" formaction="/ExtractAdjVrb">extract verbe et adjective et les noms</button>
 </form>
 
 </body>
