--- a/web/templates/textinput.html
+++ b/web/templates/textinput.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>hello</title>
+
 </head>
 <body>
 
 <form action="/preTreatment" method="post" id="usrform">
     <label for="input">input</label>
     </br>
-    <textarea rows="5" cols="50" id="input" name="input" form="usrform">
+    <textarea lang="en" rows="5" cols="50" id="input" name="input" form="usrform" spellcheck="true">
         Enter text here...</textarea>
     </br>
      <input type="submit" value="pre-traitemnt">
