extraction des elemnts calcul polarite verbe plus visualisation 30.04.2020

--- a/web/templates/verb_adj.html
+++ b/web/templates/verb_adj.html
@@ -37,8 +37,14 @@
         <td> {{n+1}}</td>
         <td>{{sentences[n]}}</td>
         <td>verbes : {{verbs[n]}}</br> adjs : {{adjs[n]}} </br> les noms : {{nouns[n]}}</td>
-        <td>{{array_polarity_verbe[n]}}</td>
-        <td> &#{{emoji_verb[n]}}</td>
+        <td>{{array_polarity_verbe[n]}}
+        <br>
+            {{array_polarity_adjective[n]}}
+        </td>
+        <td> &#{{emoji_verb[n]}}
+        <br>
+            &#{{emoji_adjective[n]}}
+        </td>
 
 
     </tr>
