--- a/web/templates/textinput.html
+++ b/web/templates/textinput.html
@@ -8,10 +8,8 @@
 <body>
 
 <form action="/preTreatment" method="post" id="usrform">
-    <label for="input">input</label>
     </br>
-    <textarea  lang="en" rows="5" cols="50" id="input" name="input" form="usrform" spellcheck="true">
-        Enter text here...</textarea>
+    <textarea placeholder="Enter text here..." lang="en" rows="5" cols="50" id="input" name="input" form="usrform" spellcheck="true"></textarea>
     </br>
      <input type="submit" value="pre-traitemnt">
 </form>
