--- a/web/templates/correction.html
+++ b/web/templates/correction.html
@@ -1,30 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <title>hello</title>
 
     <style>
-            textarea {
-                resize: none;
-                height: auto;
-                width: 100%;
-            }
+        textarea {
+            resize: none;
+            height: auto;
+            width: 100%;
+        }
     </style>
 </head>
 <body>
-<h1>la langues est : {{language}}</h1>
-<form action="/SubjectivityFiltering" method="post" id="usrform">
-    <label>Phrase</label>
-    </br>
-    {% for n in range(phrases| length) %}
-    <textarea rows="6" cols="50" id="input" name="input{{n}}" form="usrform"> {{phrases[n]}}</textarea>
-    </br>
-    <label> {{erreurs[n]}}</label>
-    </br>
-    {% endfor %}
-     <input type="submit" value="subjectivity">
-</form>
+<div class="container">
+    <div class="row  justify-content-md-center">
+        <div class="col-ml-6">
+            <p style="font-size:60px" class="text-secondary">Classification d'opinion &#128540;</p>
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <h2>La langues est : <small class="text-muted"> {{language}} </small></h2>
+    </div>
+    <h4>Liste des phrases aprés segmentation</h4>
+    <form action="/SubjectivityFiltering" method="post" id="usrform">
+        {% for n in range(phrases| length) %}
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="card border-primary mb-4">
+                    <div class="card-body text-primary">
+                        <h6>phrase<small class="text-info"> {{n+1}} </small></h6>
 
+                        <textarea cols="50" id="input" name="input{{n}}" form="usrform"> {{phrases[n]}}</textarea>
+                        </br>
+                        <label class="text-danger"> {{erreurs[n]}}</label>
+                        </br>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        {% endfor %}
+
+        <input class="btn btn-primary" type="submit" value="subjectivity">
+    </form>
+</div>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </body>
 </html>
