--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,44 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+
     <title>hello</title>
-    <style>
-        button {
-  display: inline-block;   /* this shouldn't be needed on a button though */
-  width: 100%;
-              margin: 5px;
+    <script>
+        function checkconnection() {
+            var status = navigator.onLine;
+            if (!status) {
+                alert('Internet connected !!');
+            }
+        }
+    </script>
 
-}
-    </style>
 </head>
-<body>
-<p style="font-size:50px">classification d'opinion &#128540;</p>
-<form  method="post" id="usrform">
-    <table>
-        <tr>
-            <td>
-            <label>pour cree notre propre texte</label>
-            </td>
-            <td>
-        <button type="submit" formaction="/EnterText" formnovalidate>entrer texte</button>
-            </td>
-            </tr>
-        <tr>
-    <br>
+<body onload="checkconnection();">
+<div class="container">
+    <div class="row  justify-content-md-center">
+        <div class="col-ml-6">
+            <p style="font-size:60px" class="text-secondary">Classification d'opinion &#128540;</p>
+        </div>
+    </div>
+    <div class="btn-group mb-2">
+        <button type="button" class="btn btn-primary">Texte</button>
+        <button type="button" class="btn btn-outline-info">Tweeter</button>
+        <button type="button" class="btn btn-primary">Documents</button>
+    </div>
+    <div class="card text-center">
+        <div class="card-header">Texte</div>
+        <div class="card-body">
+            <form method="post" id="usrform">
+                <div class="container">
+                    <p class="card-text">cette option nous permettre des cree notre propre texte</p>
+                    <button class="btn btn-primary" type="submit" formaction="/EnterText" formnovalidate>commancer
+                    </button>
+                    <p class="card-text">cette option nous permettre de cherche un sujet depuis tweeter. </p>
+                    <div class="row justify-content-center">
+                        <input type="text" class="form-control col-md-6" name="subject" placeholder="Sujet">
+                    </div>
+                    <br>
+                    <button type="submit" class="btn btn-outline-info" formaction="/GetTextFromTwitter">commancer
+                    </button>
+                    <p class="card-text">cette option nous permettre de choisir un fichier depuis desktop</p>
+                    <div class="custom-file">
+                        <div class="row justify-content-center">
+                        <input type="file" class="custom-file-input" id="customFile">
+                        <label class="custom-file-label col-md-6" for="customFile">choisir fichier</label>
+                        </div>
+                    </div>
 
-            <td>
-            <label>pour recuperer des twits : </label>
-            </td>
-            <td>
-                <label>Sujet : </label>
-                <input type="text" name="subject"  required="required" pattern="[A-Za-z0-9]{1,20}">
-                <br>
-    <button type="submit" formaction="/GetTextFromTwitter">recuperer de puis twiter</button>
-            </td>
-        </tr>
-    </table>
-</form>
+                </div>
+            </form>
+        </div>
+    </div>
 
+</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </body>
 </html>
