--- a/web/templates/sentencesSubjective.html
+++ b/web/templates/sentencesSubjective.html
@@ -1,36 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <title>Title</title>
-
+    <style>
+        #input {
+            font-size: 24px;
+            margin: 10px;
+        }
+    </style>
 </head>
 
 <body>
-<form action="/ConnectorSegmentation" method="post" id="usrform">
-    <h1>Filtrage par subjectivite</h1>
-    <table>
-    {% for n in range(sentences| length) %}
-    <tr>
-    <td>
-        <label id="input" name="input{{n}}"  value="1"> {{sentences[n]}}</label>
-    <input type="hidden" name="r_id{{n}}" value="{{sentences[n]}}"/>
-    </td>
-        <td>
-    {% if subjective_state[n] %}
-    porteur d'opinion : <input type="radio" name="imgsel{{n}}" value="true" checked="checked" />
-    non porteur d'pinion : <input type="radio" name="imgsel{{n}}" value="false"  />
-    {% else %}
-    porteur d'opinion : <input type="radio" name="imgsel{{n}}" value="true"  />
-    non porteur d'pinion : <input type="radio" name="imgsel{{n}}" value="false" checked="checked" />
-    {% endif %}
-        </td>
-    </tr>
-    {% endfor %}
-    </table>
-    </br>
-    <button type="submit" formaction="/ConnectorSegmentation">segmentation par connecteur</button>
-</form>
+<div class="container">
+    <div class="row  justify-content-md-center">
+        <div class="col-ml-6">
+            <p style="font-size:60px" class="text-secondary">Classification d'opinion &#128540;</p>
+        </div>
+    </div>
 
+    <h4>Selectioner les phrases porteuse d'opinion</h4>
+    <br>
+
+    <form action="/ConnectorSegmentation" method="post" id="usrform">
+
+        {% for n in range(sentences| length) %}
+
+        <div class="card">
+            <div class="row card-body align-items-center">
+                <div class="card text-white bg-secondary ">
+                    <div class="card-body">
+                        <h4 class="card-title">{{n+1}}</h4>
+                    </div>
+                </div>
+                <label class="a" id="input" name="input{{n}}" value="1"> {{sentences[n]}} </label>
+                <input type="hidden" name="r_id{{n}}" value="{{sentences[n]}}"/>
+
+                <div>
+                    {% if subjective_state[n] %}
+
+
+                    <div class="custom-control custom-radio">
+                        <input type="radio" class="custom-control-input" name="imgsel{{n}}" value="true"
+                               id="customRadio{{n}}"
+                               checked="checked">
+                        <label class="custom-control-label" for="customRadio{{n}}">porteur</label>
+                    </div>
+                    <div class="custom-control custom-radio mt-2">
+                        <input type="radio" class="custom-control-input" name="imgsel{{n}}" value="false"
+                               id="customRadio{{n}}">
+                        <label class="custom-control-label" for="customRadio{{n}}">non porteur</label>
+                    </div>
+                    {% else %}
+                    <div class="custom-control custom-radio">
+                        <input type="radio" class="custom-control-input" name="imgsel{{n}}" value="true"
+                               id="customRadio{{n}}">
+                        <label class="custom-control-label" for="customRadio{{n}}">porteur</label>
+                    </div>
+                    <div class="custom-control custom-radio mt-2">
+                        <input type="radio" class="custom-control-input" name="imgsel{{n}}" value="false"
+                               id="customRadio{{n}}"
+                               checked="checked">
+                        <label class="custom-control-label" for="customRadio{{n}}">non porteur</label>
+                    </div>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+        <br>
+        {% endfor %}
+        <br>
+        <input class="btn btn-primary " type="submit" formaction="/ConnectorSegmentation"
+               value="segmentation par connecteur"/>
+
+    </form>
+</div>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </body>
 </html>
