--- a/web/templates/textinput.html
+++ b/web/templates/textinput.html
@@ -1,18 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+
     <title>hello</title>
 </head>
 
 <body>
+<div class="container">
+    <div class="row  justify-content-md-center">
+        <div class="col-ml-6">
+            <p style="font-size:60px" class="text-secondary">Classification d'opinion &#128540;</p>
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <form action="/preTreatment" method="post" id="usrform">
+            </br>
+            <textarea class="col-ml-12" placeholder="Enter text here..." lang="en" rows="5" cols="90" id="input"
+                      name="input"
+                      form="usrform"
+                      spellcheck="true"></textarea>
+            </br>
+            <div class="input-group-append">
+                <button type="submit" class="btn btn-primary">pre-traitemnt</button>
+                <button type="reset" class="btn btn-danger">supprimer</button>
+            </div>
+        </form>
+    </div>
 
-<form action="/preTreatment" method="post" id="usrform">
-    </br>
-    <textarea placeholder="Enter text here..." lang="en" rows="5" cols="50" id="input" name="input" form="usrform" spellcheck="true"></textarea>
-    </br>
-     <input type="submit" value="pre-traitemnt">
-</form>
-
+</div>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </body>
 </html>
