--- a/web/templates/textinput.html
+++ b/web/templates/textinput.html
@@ -16,16 +16,18 @@
         </div>
     </div>
     <div class="row justify-content-center">
+
         <form action="/preTreatment" method="post" id="usrform">
-            </br>
-            <textarea class="col-ml-12" placeholder="Enter text here..." lang="en" rows="5" cols="90" id="input"
+            <h4>Texte</h4>
+            <textarea  placeholder="Entrer votre texte ici ..... EX :This car is beautiful. " lang="en"
+                      rows="7" cols="90" id="input"
                       name="input"
                       form="usrform"
                       spellcheck="true"></textarea>
             </br>
             <div class="input-group-append">
                 <button type="submit" class="btn btn-primary">pre-traitemnt</button>
-                <button type="reset" class="btn btn-danger">supprimer</button>
+                <button style="margin-left:10px" type="reset" class="btn btn-danger">supprimer</button>
             </div>
         </form>
     </div>
