--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -17,39 +17,35 @@
 
 </head>
 <body onload="checkconnection();">
+
 <div class="container">
     <div class="row  justify-content-md-center">
-        <div class="col-ml-6">
-            <p style="font-size:60px" class="text-secondary">Classification d'opinion &#128540;</p>
+        <div class="row">
+            <p style="font-size:60px" class="text-secondary">Classification d'opinion </p>
+            <p id="emoji" style="font-size:60px">&#128540;</p>
         </div>
     </div>
     <div class="btn-group mb-2">
-        <button type="button" class="btn btn-primary">Texte</button>
-        <button type="button" class="btn btn-outline-info">Tweeter</button>
-        <button type="button" class="btn btn-primary">Documents</button>
+        <button onmouseover="addpopretext()" onclick="addpopretext()" type="button" class="btn btn-primary">Texte
+        </button>
+        <button onmouseover="addtweetr()" onclick="addtweetr()" type="button" class="btn btn-primary">Tweeter</button>
+        <button onmouseover="addfichiertext()" onclick="addfichiertext()" type="button" class="btn btn-primary">
+            Documents
+        </button>
     </div>
     <div class="card text-center">
-        <div class="card-header">Texte</div>
+        <div id="titre1" class="card-header">Texte</div>
         <div class="card-body">
             <form method="post" id="usrform">
+
                 <div class="container">
-                    <p class="card-text">cette option nous permettre des cree notre propre texte</p>
-                    <button class="btn btn-primary" type="submit" formaction="/EnterText" formnovalidate>commancer
-                    </button>
-                    <p class="card-text">cette option nous permettre de cherche un sujet depuis tweeter. </p>
-                    <div class="row justify-content-center">
-                        <input type="text" class="form-control col-md-6" name="subject" placeholder="Sujet">
+                    <div id="espace" class="container justify-content-center">
+                        <p class="card-text">cette option nous permettre des cree notre propre texte</p>
+                        <button class="btn btn-primary" type="submit" formaction="/EnterText" formnovalidate>commancer
+                        </button>
+
                     </div>
-                    <br>
-                    <button type="submit" class="btn btn-outline-info" formaction="/GetTextFromTwitter">commancer
-                    </button>
-                    <p class="card-text">cette option nous permettre de choisir un fichier depuis desktop</p>
-                    <div class="custom-file">
-                        <div class="row justify-content-center">
-                        <input type="file" class="custom-file-input" id="customFile">
-                        <label class="custom-file-label col-md-6" for="customFile">choisir fichier</label>
-                        </div>
-                    </div>
+
 
                 </div>
             </form>
@@ -63,5 +59,55 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<script>
+    function addpopretext() {
+        var element = document.getElementById("espace");
+        var element2 = document.getElementById("titre1");
+        var element3 = document.getElementById("emoji");
+        element3.innerHTML = "&#128536;"
+        element2.innerHTML = "Texte"
+        element.innerHTML = "<p class=\"card-text\">cette option nous permettre des cree notre propre texte</p>\n" +
+            "                        <button class=\"btn btn-primary\" type=\"submit\" formaction=\"/EnterText\" formnovalidate>commancer\n" +
+            "                        </button>";
+    }
+
+    function addtweetr() {
+        var element2 = document.getElementById("titre1");
+        element2.innerHTML = "Tweeter"
+        var element = document.getElementById("espace");
+        var element3 = document.getElementById("emoji");
+        element3.innerHTML = "&#128520;"
+        element.innerHTML = "            <p class=\"card-text\">cette option nous permettre de cherche un sujet depuis tweeter. </p>\n" +
+            "                    <div class=\"row justify-content-center\">\n" +
+            "                        <input type=\"text\" class=\"form-control col-md-6\" name=\"subject\" placeholder=\"Sujet\">\n" +
+            "                    </div>\n" +
+            "                    <br>\n" +
+            "                    <button type=\"submit\" class=\"btn btn-primary\" formaction=\"/GetTextFromTwitter\">commancer\n" +
+            "                    </button>\n" +
+            "        ";
+
+    }
+
+    function addfichiertext() {
+        var element = document.getElementById("espace");
+        var element2 = document.getElementById("titre1");
+        var element3 = document.getElementById("emoji");
+        element3.innerHTML = "&#128514;"
+        element2.innerHTML = "Document"
+        element.innerHTML = "<p class=\"card-text\">cette option nous permettre de choisir un fichier depuis desktop</p>\n" +
+            "                    <div class=\"custom-file\">\n" +
+            "                        <div class=\"row \">\n" +
+            "                            <input id='\"file\"' type=\"file\" class=\"custom-file-input\" id=\"customFile\">\n" +
+            "                            <label class=\"custom-file-label \" for=\"customFile\">choisir fichier</label>\n" +
+            "                        </div>\n" +
+            "                    </div>";
+
+    }
+
+    $("#file").change(function () {
+        alert("Hello! I am an alert box!!");
+    });
+
+</script>
 </body>
 </html>
