* analyse modele global (lexicon englais lexicons français)

--- a/web/templates/sub_sentence_subjectivity.html
+++ b/web/templates/sub_sentence_subjectivity.html
@@ -19,7 +19,7 @@
             <p style="font-size:60px" class="text-secondary">Classification d'opinion &#128540;</p>
         </div>
     </div>
-    <h4>selectioner les sous phrases porteuse d'opinon</h4>
+    <h4>Selectioner les sous phrases porteuse d'opinon</h4>
     <form action="/ConnectorSegmentation" method="post" id="usrform">
 
         {% for n in range(sentences| length) %}
