--- a/web/templates/correction.html
+++ b/web/templates/correction.html
@@ -31,12 +31,21 @@
             <div class="col-sm-12">
                 <div class="card border-primary mb-4">
                     <div class="card-body text-primary">
-                        <div class="card text-white bg-info">
-                             <h6 class="card-title">phrase {{n+1}}</h6>
-                        </div>
+
+                        <h4 class="card-title">phrase {{n+1}}</h4>
+
                         <textarea cols="50" id="input" name="input{{n}}" form="usrform"> {{phrases[n]}}</textarea>
-                        </br>
-                        <label class="text-danger"> {{erreurs[n]}}</label>
+                        {% for j in range(list_word[n]| length) %}
+                        <div class="row align-items-center">
+                            <label class="text-secondary">{{list_word[n][j]}} :</label>
+                            {% for i in range(list_suggestion[n][j]| length) %}
+                            <button  style="margin-left: 5px" type="button"
+                                    class="btn btn-outline-danger show-toast">{{list_suggestion[n][j][i]}}
+                            </button>
+                            {% endfor %}
+                        </div>
+                        <br>
+                        {% endfor %}
                         </br>
                     </div>
                 </div>
@@ -48,8 +57,28 @@
         <input class="btn btn-primary" type="submit" value="subjectivity">
     </form>
 </div>
+<div class="toast" id="myToast" style="position: absolute; top: 0; right: 0;">
+        <div class="toast-header">
+            <strong class="mr-auto"><i class="fa fa-grav"></i> We miss you!</strong>
+            <small>11 mins ago</small>
+            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="toast-body">
+            <div>It's been a long time since you visited us. We've something special for you. <a href="#">Click here!</a></div>
+        </div>
+    </div>
+
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<script>
+    $(document).ready(function(){
+        $(".show-toast").click(function(){
+            $("#myToast").toast('show');
+        });
+    });
+</script>
 </body>
 </html>
