--- a/web/templates/textinput.html
+++ b/web/templates/textinput.html
@@ -19,14 +19,14 @@
 
         <form action="/preTreatment" method="post" id="usrform">
             <h4>Texte</h4>
-            <textarea  placeholder="Entrer votre texte ici ..... EX :This car is beautiful. " lang="en"
+            <textarea id="textarea" placeholder="Entrer votre texte ici ..... EX :This car is beautiful. " lang="en"
                       rows="7" cols="90" id="input"
                       name="input"
                       form="usrform"
                       spellcheck="true"></textarea>
             </br>
             <div class="input-group-append">
-                <button type="submit" class="btn btn-primary">pre-traitemnt</button>
+                <button disabled id="button" type="submit" class="btn btn-primary">pre-traitemnt</button>
                 <button style="margin-left:10px" type="reset" class="btn btn-danger">supprimer</button>
             </div>
         </form>
@@ -36,5 +36,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+
 </body>
 </html>
