* analyse modele global (lexicon englais lexicons français)

--- a/web/templates/textinput.html
+++ b/web/templates/textinput.html
@@ -37,6 +37,19 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
+<script>
+    $('#textarea').on('keyup', function () {
+                let empty = false;
 
+                $('#textarea').each(function () {
+                    empty = $(this).val().length == 0;
+                });
+
+                if (empty)
+                    $('#button').attr('disabled', 'disabled');
+                else
+                    $('#button').attr('disabled', false);
+            });
+</script>
 </body>
 </html>
